--- a/WebContent/form.handlebars
+++ b/WebContent/form.handlebars
@@ -46,7 +46,7 @@
 					{{/with}}
 					<br />
 					<br />
-					<div class="col col-sm-offset-3 col-md-offset-3 col-lg-offser\t-3">
+					<div class="col col-sm-offset-3 col-md-offset-5 col-lg-offsert-5">
 					{{#each buttons}}
 						<input class="{{tagClass}} left-margin-2 right-margin-2" onclick="{{buttonFunction}}" type="{{buttonType}}" value="{{choice}}">
 					{{/each}}
