--- a/WebContent/form.handlebars
+++ b/WebContent/form.handlebars
@@ -26,7 +26,7 @@
 							<div class="btn-group" data-toggle="buttons">
 							{{#each tagChoices}}
 								  <label class="btn btn-default {{subtagClass}}">
-								  <input type="radio">
+								  <input name="{{subtagName}}" type="radio">
 								  {{choice}}
 								  </label>
 							{{/each}}
