--- a/WebContent/index.css
+++ b/WebContent/index.css
@@ -6,6 +6,10 @@ body {
 	margin-top: 1em; 
 }
 
+.top-margin-30{
+	margin-top: 30em; 
+}
+
 .left-margin-2{
 	margin-left: 2em;
 }
@@ -32,3 +36,24 @@ body {
 .green-text{
 	color: green;
 }
+
+.big-text {
+	font-size: 5em;
+}
+
+.helvetica {
+	font-family: 'Helvetica', 'Arial', sans-serif;
+}
+
+
+.nav-button {
+	margin-left: 50px;
+	margin-right: 50px;
+}
+
+a:link,a:visited,a:hover, a:active {
+	text-decoration: none;
+	color: black;
+}
+
+
