--- a/WebContent/index.css
+++ b/WebContent/index.css
@@ -6,6 +6,10 @@ body {
 	margin-top: 1em; 
 }
 
+.top-margin-5{
+	margin-top: 5em; 
+}
+
 .top-margin-30{
 	margin-top: 30em; 
 }
@@ -39,6 +43,7 @@ body {
 
 .big-text {
 	font-size: 5em;
+	color: #052860;
 }
 
 .helvetica {
@@ -49,7 +54,9 @@ body {
 .nav-button {
 	margin-left: 50px;
 	margin-right: 50px;
+	border: 1px solid #052860 !important;
 }
+
 
 .field-error {
 	border-color: red !important;
@@ -57,3 +64,6 @@ body {
     border-style:solid !important;
 }
 
+.white-text {
+	color: white;
+}
